# pangu

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: backfill-manager.agent.md  backtest-analyst.agent.md  backtest-analyst.md  data-quality.agent.md  data-quality.md  factor-researcher.md
config/: backfill_stock_pool.yaml  global_market_mapping.yaml  settings.toml  watchlist.yaml
docs/: PRD.md  architecture.md  backtest-alignment-notes.md  configuration.md  copilot-agents-guide.md  deployment.md  feishu-bot-setup.md  litellm-setup.md  ml-experiments.md  scheduling.md  val-experiments.md
scripts/: feishu_pairing.py  optuna_hpo.py  portfolio_grid.py
skills/factor-research/: SKILL.md
skills/model-tuner/: SKILL.md
skills/train-and-backtest/: SKILL.md
src/pangu/: __init__.py  cli.py  config.py  main.py  models.py  rebalance.py  scheduler.py  tz.py  utils.py
src/trading_agent/: __init__.py  config.py  main.py  models.py  scheduler.py  tz.py  utils.py
tests/: conftest.py  fakes.py  test_config.py  test_protocol_compliance.py  test_scheduler.py
tests/test_backtest/: test_engine.py  test_replay.py
tests/test_data/: test_fake_providers.py  test_fundamental_akshare.py  test_fundamental_composite.py  test_index_pool.py  test_market_akshare.py  test_news_akshare.py  test_stock_pool_yaml.py  test_stock_profiles.py  test_storage.py
tests/test_factor/: test_alpha158.py  test_fundamental.py  test_macro.py  test_technical.py
(+123 files in other folders)
