[project]
name = "pangu"
version = "0.1.0"
description = "A-share quantitative trading signal system with multi-factor + LLM event-driven strategy"
requires-python = ">=3.12"
dependencies = [
    # Layer 1: Data
    "akshare>=1.14",
    "baostock>=0.8",
    "tenacity>=8.2",
    # Layer 2: Factor
    "pandas-ta>=0.3",
    "pandas>=2.0",
    "numpy>=1.24",
    # Layer 3: Strategy
    "litellm>=1.0",
    # Layer 5: Presentation & Infrastructure
    "streamlit>=1.30",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "aiohttp>=3.9",
    "lark-oapi>=1.4",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
pangu = "pangu.cli:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pangu"]
